src/k8s/infisical/server/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: infisical-https-redirect
  namespace: infisical
spec:
  redirectScheme:
    scheme: https
    permanent: true
